url for apikey location

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,5 +7,6 @@ spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 
 spring.h2.console.enabled=true
 
-
+#Place you api here from:
+#http://www.omdbapi.com/
 api_key: 0000000
